Store changes and player data in one class
Creates CurrentPlayerData to hold all info, buffer and changes from
player. Removes SaveData. Moves character related classes to dedicated
package.